style:Transfer Summary Card UI update,Form UI update for desktop easier time selection. fix:Prevented user to select earlier time in the same date. Added rezervation time gap.

--- a/app/(client)/styles/globals.css
+++ b/app/(client)/styles/globals.css
@@ -56,3 +56,11 @@ html{
 .backface-hidden {
   backface-visibility: hidden;
 }
+input:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+.input:focus {
+  box-shadow: none !important;
+  border-color: var(--fallback-p, oklch(var(--p)/var(--tw-border-opacity))) !important;
+}
